# lab-ros2

./: README.md
lab/01-ur-moveit-tutor-image/: Dockerfile  README.md
lab/02-ur-moveit-tutor-mount-src/: clean.sh
lab/03-moveit-move-arm/: docker-entrypoint.sh
lab/03-moveit-move-arm/old/: 01_init_moveit_tutorials.sh  02_init_moveit.sh
lab/03-moveit-move-arm/src/: move_panda_moveit2.py
lab/04-panda/: docker-entrypoint.sh  start.sh
lab/05-moveit_task_constructor/: README.md  Todo.md  frames_2026-04-08_08.46.19.gv  start.sh
lab/06.01-pinocchio-simple/: Dockerfile  README.md  start.sh
lab/06.01-pinocchio-simple/src/: CMakeLists.txt  panda.urdf  panda_ik.py
lab/06.02-pinocchio-ros2/: Dockerfile  README.md  clean_container.sh  docker-compose.yml  init_container.sh
lab/06.02-pinocchio-ros2/src/mysrc/panda_ik/: README.md
lab/07.01-ros2_control-tcpip/: Dockerfile  README.md  clean_container.sh  start.sh
lab/07.01-ros2_control-tcpip/src/: move_panda_moveit2.py
lab/07.01-ros2_control-tcpip/src/my_custom_arm_hw/: CMakeLists.txt  CMakeLists.txt.old  my_custom_arm_hw.xml  package.xml  setup.py
lab/07.01-ros2_control-tcpip/src/my_custom_arm_hw/config/: controllers.yaml  controllers.yaml.org
lab/07.01-ros2_control-tcpip/src/my_custom_arm_hw/include/my_custom_arm_hw/: custom_tcp_hardware.hpp
lab/07.01-ros2_control-tcpip/src/my_custom_arm_hw/launch/: my_robot.launch.py  my_robot.launch.py.org
lab/07.01-ros2_control-tcpip/src/my_custom_arm_hw/src/: custom_tcp_hardware.cpp
lab/07.01-ros2_control-tcpip/src/my_custom_arm_hw/urdf/: my_robot.ros2_control.xacro  my_robot.urdf.xacro  my_robot_body.urdf.xacro  my_robot_hand.ros2_control.xacro  where_to_find_urdf.txt
lab/07.01-ros2_control-tcpip/src/mysrc/panda_ik/: install_pinocchio.sh
labs/01-ur-moveit-tutor-image/: README.md  docker-compose.yml
labs/02-ur-moveit-tutor-mount-src/: README.md
labs/03-moveit-move-arm/: 01_init_all_in_one.sh  Dockerfile  README.md  clean.sh  clean_docker.sh  docker-entrypoint.sh  init_docker.sh
labs/04-panda/: README.md  init.sh  start.sh
labs/04-panda/src/: move_fr3_arm.py
labs/05-moveit_task_constructor/: README.md  clean.sh  docker-compose.yml  docker-ros-env.sh  frames_2026-04-08_08.54.33.gv  init.sh
labs/05-moveit_task_constructor/src/old/: move_panda_moveit2_ok.py
labs/06.01-pinocchio-simple/: Dockerfile  README.md  clean_container.sh  docker-compose.yml  init_container.sh
labs/06.01-pinocchio-simple/src/: panda_ik.cpp
